@@ -88,7 +88,7 @@ CONFIG_ARCH_CHIP=pic32mx
 CONFIG_ARCH_CHIP_PIC32MX795F512L=y
 CONFIG_ARCH_BOARD=pic32-starterkit
 CONFIG_ARCH_BOARD_PIC32_STARTERKIT=y
-CONFIG_BOARD_LOOPSPERMSEC=5560
+CONFIG_BOARD_LOOPSPERMSEC=7245
 CONFIG_DRAM_SIZE=(128*1024)
 CONFIG_DRAM_START=0xa0000000
 CONFIG_DRAM_END=(CONFIG_DRAM_START+CONFIG_DRAM_SIZE)
